Closed Bug 590546 Opened 13 years ago Closed 13 years ago

Incubator embedding: [@ ConsoleListener::Observe] crashes on MozView destroy

Categories

(Core Graveyard :: Embedding: APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tatiana, Assigned: tatiana)

Details

(Keywords: crash)

Crash Data

Attachments

(2 files)

STEPS:
run ./testqmozembed "http://www.youtube.com/watch?v=gWAnw1kD5UU"

wait until status string updated, but page not updated yet

press exit button

EXPECTED OUTCOME: app closed without crash
ACTUAL OUTCOME: app crashed
Attachment #469068 - Attachment mime type: application/octet-stream → text/plain
Attached patch patchSplinter Review
Assignee: nobody → tanya.meshkova
Status: NEW → ASSIGNED
Attachment #469075 - Flags: review?(mark.finkle)
Attachment #469075 - Flags: feedback?(romaxa)
Comment on attachment 469075 [details] [diff] [review]
patch

Looks safe to me
Attachment #469075 - Flags: review?(mark.finkle) → review+
Attachment #469075 - Flags: feedback?(romaxa) → feedback+
http://hg.mozilla.org/incubator/embedding/rev/fd2905d0088c
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
please ignore prev comment
http://hg.mozilla.org/incubator/embedding/rev/64e8cf2dd4e9 actually
Keywords: crash
Crash Signature: [@ ConsoleListener::Observe]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.