Bug 590546 - Incubator embedding: [@ ConsoleListener::Observe] crashes on MozView destroy r=mark.finkle